config/dpod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dpod
spec:
  type: ClusterIP 
  ports:
    - name: http
      port: 80
      targetPort: 8888
  selector:
    app: dpod
